--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "django-boilerplate",
-  "homepage": "https://kkamara.github.io/react-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,26 +11,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.8",
-    "react-router": "^6.3.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.3",
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "bootstrap": "^5.1.3",
-    "gh-pages": "^3.2.3",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
-    "sass": "^1.51.0"
+    "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
